added css and another image

--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Real Madrid vs RB Leipzig</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <main>
-        <img src="" alt="">
+    <main class="card">
+        <img src="images/banner.jpg" alt="Photo of RB Leipzig logo on left and Real Madrid logo on right">
         <h1>Real Madrid vs RB Leipzig</h1>
-        <p>Date</p>
-        <p>Time</p>
+        <p class="date">Date: March 6, 2024</p>
+        <p class="time">Time: 2:00 pm Central Time</p>
         <button>Find out more</button>
     </main>
 </body>
