working on large screen size

--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 </head>
 <body>
     <main class="card">
-        <img class="first-img" src="images/banner.jpg" alt="Photo of RB Leipzig logo on left and Real Madrid logo on right">
+        <div class="background-banner"></div>
+        <img class="first-img" src="images/red-bull-leipzig-logo-png-transparent.png" alt="Rb Leipzig logo">
+        <img class="second-img" src="images/real-madrid-c-f-centenario-logo-png-transparent.png" alt="Real Madrid football club logo">
         <h1>RB Leipzig <span class="vs-text">vs</span> Real Madrid</h1>
         <p class="date"><span class="date-text">Date:</span> March 6, 2024</p>
         <p class="time"><span class="time-text">Time</span> 2 pm CST</p>
